T3/GramaticaParser.py
# Generated from Gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramaticaParser ( Parser ):

    grammarFileName = "Gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'^'", "'&'", "'e'", "'ou'", "'algoritmo'", 
                     "'fim_algoritmo'", "'<-'", "'declare'", "','", "':'", 
                     "'tipo'", "'registro'", "'fim_registro'", "'constante'", 
                     "'='", "'nao'", "'leia'", "'escreva'", "'se'", "'entao'", 
                     "'fim_se'", "'senao'", "'..'", "'caso'", "'seja'", 
                     "'fim_caso'", "'enquanto'", "'faca'", "'fim_enquanto'", 
                     "'ate'", "'para'", "'fim_para'", "'INICIO'", "'FIM'", 
                     "'funcao'", "'fim_funcao'", "'retorne'", "'procedimento'", 
                     "'var'", "'fim_procedimento'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'%'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TIPO_VAR", "NUMINT", "NUMREAL", 
                      "CADEIA", "VARIAVEL", "OP_ARIT1", "OP_ARIT2", "OP_ARIT3", 
                      "OP_REL", "ERRO_COMENTARIO", "COMENTARIO", "WS", "ABRE_PAR", 
                      "FECHA_PAR", "ABRE_COL", "FECHA_COL" ]

    RULE_var_personalizada = 0
    RULE_var_registro = 1
    RULE_ponteiro = 2
    RULE_endereco = 3
    RULE_op_bool = 4
    RULE_programa = 5
    RULE_listaComandos = 6
    RULE_comando = 7
    RULE_comandoAtribuicao = 8
    RULE_declaracao = 9
    RULE_declaracao_tipo = 10
    RULE_declaracao_registro = 11
    RULE_declaracao_constante = 12
    RULE_expressaoAritmetica = 13
    RULE_fatorAritmetico = 14
    RULE_expressaoRelacional = 15
    RULE_termoRelacional = 16
    RULE_entrada = 17
    RULE_comandoEntrada = 18
    RULE_saida = 19
    RULE_comandoSaida = 20
    RULE_comandoCondicao = 21
    RULE_intervalo = 22
    RULE_comandoCaso = 23
    RULE_comandoEnquanto = 24
    RULE_comandoFaca = 25
    RULE_comandoPara = 26
    RULE_subAlgoritmo = 27
    RULE_parametros_chamada_funcao = 28
    RULE_chamada_funcao = 29
    RULE_parametros_declaracao_funcao = 30
    RULE_declaracao_funcao = 31
    RULE_retorno_funcao = 32
    RULE_procedimento = 33

    ruleNames =  [ "var_personalizada", "var_registro", "ponteiro", "endereco", 
                   "op_bool", "programa", "listaComandos", "comando", "comandoAtribuicao", 
                   "declaracao", "declaracao_tipo", "declaracao_registro", 
                   "declaracao_constante", "expressaoAritmetica", "fatorAritmetico", 
                   "expressaoRelacional", "termoRelacional", "entrada", 
                   "comandoEntrada", "saida", "comandoSaida", "comandoCondicao", 
                   "intervalo", "comandoCaso", "comandoEnquanto", "comandoFaca", 
                   "comandoPara", "subAlgoritmo", "parametros_chamada_funcao", 
                   "chamada_funcao", "parametros_declaracao_funcao", "declaracao_funcao", 
                   "retorno_funcao", "procedimento" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    TIPO_VAR=42
    NUMINT=43
    NUMREAL=44
    CADEIA=45
    VARIAVEL=46
    OP_ARIT1=47
    OP_ARIT2=48
    OP_ARIT3=49
    OP_REL=50
    ERRO_COMENTARIO=51
    COMENTARIO=52
    WS=53
    ABRE_PAR=54
    FECHA_PAR=55
    ABRE_COL=56
    FECHA_COL=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Var_personalizadaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(GramaticaParser.VARIAVEL, 0)

        def getRuleIndex(self):
            return GramaticaParser.RULE_var_personalizada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_personalizada" ):
                listener.enterVar_personalizada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_personalizada" ):
                listener.exitVar_personalizada(self)




    def var_personalizada(self):

        localctx = GramaticaParser.Var_personalizadaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_personalizada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GramaticaParser.VARIAVEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_registroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.VARIAVEL)
            else:
                return self.getToken(GramaticaParser.VARIAVEL, i)

        def getRuleIndex(self):
            return GramaticaParser.RULE_var_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_registro" ):
                listener.enterVar_registro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_registro" ):
                listener.exitVar_registro(self)




    def var_registro(self):

        localctx = GramaticaParser.Var_registroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_registro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(GramaticaParser.VARIAVEL)
            self.state = 71
            self.match(GramaticaParser.T__0)
            self.state = 72
            self.match(GramaticaParser.VARIAVEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PonteiroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_ponteiro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPonteiro" ):
                listener.enterPonteiro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPonteiro" ):
                listener.exitPonteiro(self)




    def ponteiro(self):

        localctx = GramaticaParser.PonteiroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ponteiro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(GramaticaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnderecoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_endereco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndereco" ):
                listener.enterEndereco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndereco" ):
                listener.exitEndereco(self)




    def endereco(self):

        localctx = GramaticaParser.EnderecoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_endereco)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(GramaticaParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_boolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaParser.RULE_op_bool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_bool" ):
                listener.enterOp_bool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_bool" ):
                listener.exitOp_bool(self)




    def op_bool(self):

        localctx = GramaticaParser.Op_boolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_op_bool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GramaticaParser.EOF, 0)

        def declaracao_constante(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.Declaracao_constanteContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.Declaracao_constanteContext,i)


        def declaracao_tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.Declaracao_tipoContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.Declaracao_tipoContext,i)


        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.DeclaracaoContext,i)


        def procedimento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.ProcedimentoContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.ProcedimentoContext,i)


        def declaracao_funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.Declaracao_funcaoContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.Declaracao_funcaoContext,i)


        def listaComandos(self):
            return self.getTypedRuleContext(GramaticaParser.ListaComandosContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = GramaticaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 80
                self.declaracao_constante()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 86
                self.declaracao_tipo()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 92
                self.declaracao()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==39:
                self.state = 98
                self.procedimento()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 104
                self.declaracao_funcao()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(GramaticaParser.T__5)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 111
                self.declaracao_constante()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 117
                self.declaracao()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 70665937616900) != 0):
                self.state = 123
                self.listaComandos()


            self.state = 126
            self.match(GramaticaParser.T__6)
            self.state = 127
            self.match(GramaticaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoContext,0)


        def listaComandos(self):
            return self.getTypedRuleContext(GramaticaParser.ListaComandosContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_listaComandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaComandos" ):
                listener.enterListaComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaComandos" ):
                listener.exitListaComandos(self)




    def listaComandos(self):

        localctx = GramaticaParser.ListaComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listaComandos)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.comando()
                self.state = 130
                self.listaComandos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.comando()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comandoAtribuicao(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoAtribuicaoContext,0)


        def comandoEntrada(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoEntradaContext,0)


        def comandoSaida(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoSaidaContext,0)


        def comandoCondicao(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoCondicaoContext,0)


        def subAlgoritmo(self):
            return self.getTypedRuleContext(GramaticaParser.SubAlgoritmoContext,0)


        def comandoCaso(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoCasoContext,0)


        def comandoPara(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoParaContext,0)


        def comandoEnquanto(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoEnquantoContext,0)


        def comandoFaca(self):
            return self.getTypedRuleContext(GramaticaParser.ComandoFacaContext,0)


        def retorno_funcao(self):
            return self.getTypedRuleContext(GramaticaParser.Retorno_funcaoContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = GramaticaParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comando)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 46]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.comandoAtribuicao()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.comandoEntrada()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.comandoSaida()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.comandoCondicao()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.subAlgoritmo()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.comandoCaso()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.comandoPara()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 8)
                self.state = 142
                self.comandoEnquanto()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 9)
                self.state = 143
                self.comandoFaca()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 10)
                self.state = 144
                self.retorno_funcao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoAtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.VARIAVEL)
            else:
                return self.getToken(GramaticaParser.VARIAVEL, i)

        def var_registro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaParser.Var_registroContext)
            else:
                return self.getTypedRuleContext(GramaticaParser.Var_registroContext,i)


        def endereco(self):
            return self.getTypedRuleContext(GramaticaParser.EnderecoContext,0)


        def expressaoRelacional(self):
            return self.getTypedRuleContext(GramaticaParser.ExpressaoRelacionalContext,0)


        def expressaoAritmetica(self):
            return self.getTypedRuleContext(GramaticaParser.ExpressaoAritmeticaContext,0)


        def chamada_funcao(self):
            return self.getTypedRuleContext(GramaticaParser.Chamada_funcaoContext,0)


        def ponteiro(self):
            return self.getTypedRuleContext(GramaticaParser.PonteiroContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_comandoAtribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandoAtribuicao" ):
                listener.enterComandoAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandoAtribuicao" ):
                listener.exitComandoAtribuicao(self)




    def comandoAtribuicao(self):

        localctx = GramaticaParser.ComandoAtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comandoAtribuicao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 147
                self.ponteiro()


            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 150
                self.match(GramaticaParser.VARIAVEL)
                pass

            elif la_ == 2:
                self.state = 151
                self.var_registro()
                pass


            self.state = 154
            self.match(GramaticaParser.T__7)
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 155
                self.endereco()
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 156
                    self.match(GramaticaParser.VARIAVEL)
                    pass

                elif la_ == 2:
                    self.state = 157
                    self.var_registro()
                    pass


                pass

            elif la_ == 2:
                self.state = 160
                self.expressaoRelacional()
                pass

            elif la_ == 3:
                self.state = 161
                self.expressaoAritmetica()
                pass

            elif la_ == 4:
                self.state = 162
                self.chamada_funcao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaParser.VARIAVEL)
            else:
                return self.getToken(GramaticaParser.VARIAVEL, i)

        def TIPO_VAR(self):
            return self.getToken(GramaticaParser.TIPO_VAR, 0)

        def declaracao_registro(self):
            return self.getTypedRuleContext(GramaticaParser.Declaracao_registroContext,0)


        def var_personalizada(self):
            return self.getTypedRuleContext(GramaticaParser.Var_personalizadaContext,0)


        def ponteiro(self):
            return self.getTypedRuleContext(GramaticaParser.PonteiroContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = GramaticaParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(GramaticaParser.T__8)
            self.state = 166
            self.match(GramaticaParser.VARIAVEL)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 167
                self.match(GramaticaParser.T__9)
                self.state = 168
                self.match(GramaticaParser.VARIAVEL)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self.match(GramaticaParser.T__10)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 175
                self.ponteiro()


            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.state = 178
                self.match(GramaticaParser.TIPO_VAR)
                pass
            elif token in [13]:
                self.state = 179
                self.declaracao_registro()
                pass
            elif token in [46]:
                self.state = 180
                self.var_personalizada()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_tipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIAVEL(self):
            return self.getToken(GramaticaParser.VARIAVEL, 0)

        def declaracao_registro(self):
            return self.getTypedRuleContext(GramaticaParser.Declaracao_registroContext,0)


        def getRuleIndex(self):
            return GramaticaParser.RULE_declaracao_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_tipo" ):
                listener.enterDeclaracao_tipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_tipo" ):
                listener.exitDeclaracao_tipo(self)




    def declaracao_tipo(self):
